fills home screen with content

--- a/src/app/ui/src/menu-bar/menu-bar.css
+++ b/src/app/ui/src/menu-bar/menu-bar.css
@@ -1,4 +1,8 @@
 .menu-bar {
+    position: sticky;
+    position: -webkit-sticky;
+    top: 0;
+
     display: flex;
     height: 70px;
     padding-right: 15%;
