--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,25 @@
 @import "./app/ui/src/menu-bar/menu-bar.css";
+@import "./app/ui/src/section/section.css";
+
+:root {
+    --text-small: 15px;
+    --text-lange: 25px;
+    --text-title: 35px;
+
+    --color-accent: brown;
+    --color-text: #444;
+}
 
 body {
-    font-family: Arial, Helvetica, sans-serif;
     margin: 0px;
+
+    color: var(--color-text);
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 18px; 
+}
+
+.text-link {
+    font-size: var(--text-small);
+    color: var(--color-accent);
+    cursor: pointer;
 }
