--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,11 @@
 @import "./app/ui/src/menu-bar/menu-bar.css";
 @import "./app/ui/src/section/section.css";
 
+@font-face {
+    font-family: 'Roboto';
+    src: url('./app/assets/fonts/Roboto/Roboto-Light.ttf');
+}
+
 :root {
     --text-small: 15px;
     --text-large: 18px;
@@ -8,7 +13,7 @@
     --text-title: 35px;
 
     --color-accent: #A03000;
-    --color-text: #444;
+    --color-text: #505050;
     --color-highlight: #C0501A;
 }
 
@@ -16,7 +21,7 @@ body {
     margin: 0px;
 
     color: var(--color-text);
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Roboto;
     font-size: 18px; 
 }
 
