--- a/src/app/ui/src/menu-bar/menu-bar.css
+++ b/src/app/ui/src/menu-bar/menu-bar.css
@@ -4,8 +4,9 @@
     top: 0;
 
     display: flex;
+    justify-content: center;
+    align-items: center;
     height: 70px;
-    padding-right: 15%;
 
     background-color: var(--color-accent);
 }
@@ -15,9 +16,9 @@
     justify-content: center;
     align-items: center;
 
-    min-width: fit-content;
+    position: absolute;
+    left: 0;
     margin-left: 50px;
-    margin-right: 50px;
 
     font-size: 35px;
     color: var(--color-text-inv);
@@ -27,22 +28,46 @@
     display: flex;
     justify-content: center;
     align-items: center;
+
     width: 100%;
+    height: 100%;
 }
 
 .menu-tile {
     display: flex;
     justify-content: center;
     align-items: center;
+
     height: 100%;
     min-width: 120px;
-    margin: 0px 2px 0px 2px;
+    margin: 0 2px 0 2px;
 
     font-size: 20px;
-    color: white;
+    color: var(--color-text-inv);
 }
 
-.menu-tile:hover {
+.menu-tile-animation:hover {
     background-color: var(--color-highlight);
     cursor: pointer;
+}
+
+.menu-account-tile {
+    display: grid;
+    align-items: center;
+    grid-auto-flow: column;
+    grid-column-gap: 15px;
+
+    position: absolute;
+    height: 100%;
+    right: 0;
+    padding: 0 30px 0 30px;
+    margin-right: 20px;
+
+    font-size: 16px;
+    color: var(--color-text-inv);
+}
+
+.menu-account-tile-login-name {
+    font-size: 18px;
+    line-height: 25px;
 }
